<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.handsomelee.gotroute.Controller.ReportActivity">

  <Button
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/ReportBtn"
          android:background="@drawable/account_alert"
          android:onClick="parkingBtn"
          android:layout_marginRight="15dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toTopOf="@+id/CarParkingBtn"
          android:layout_marginEnd="15dp"/>

  <Button
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/CarParkingBtn"
          android:layout_marginRight="15dp"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="15dp"
          android:background="@drawable/car"
          android:onClick="parkingBtn"
          android:layout_marginEnd="15dp"/>

  <com.google.android.gms.maps.MapView
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:id="@+id/mapView"
          android:layout_weight="0.78"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          android:apiKey="@string/test_google_api"
          app:layout_constraintHorizontal_bias="1.0"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintVertical_bias="1.0"
          tools:layout_constraintTop_creator="1"
          tools:layout_constraintRight_creator="1"
          tools:layout_constraintBottom_creator="1"
          tools:layout_constraintLeft_creator="1"
          />

  <fragment
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
          android:id="@+id/placeSearch"
          android:layout_weight="0.67"
          app:layout_constraintTop_toTopOf="@+id/mapView"
          android:layout_marginTop="6dp"
          android:layout_marginRight="20dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="20dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          tools:layout_constraintRight_creator="1"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          tools:layout_constraintLeft_creator="1"/>

  <fragment
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
          android:id="@+id/Origin"
          android:layout_weight="0.67"
          app:layout_constraintTop_toTopOf="@+id/mapView"
          android:layout_marginTop="6dp"
          android:layout_marginRight="20dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="20dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintHorizontal_bias="0.0"
          tools:layout_constraintRight_creator="1"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          tools:layout_constraintLeft_creator="1"/>

  <fragment
          android:layout_width="0dp"
          android:layout_height="50dp"
          android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
          android:id="@+id/Destination"
          android:layout_weight="0.67"
          android:layout_marginRight="20dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="20dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintHorizontal_bias="1.0"
          tools:layout_constraintRight_creator="1"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          tools:layout_constraintLeft_creator="1"
          android:layout_marginTop="10dp"
          app:layout_constraintTop_toBottomOf="@+id/Origin"/>

  <Button
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:id="@+id/getMyLocation"
          android:layout_marginLeft="15dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="15dp"
          android:background="@drawable/round"
          android:layout_marginStart="15dp"/>

  <Button
          android:text="navigation"
          android:layout_width="140dp"
          android:layout_height="wrap_content"
          android:id="@+id/navigationBtn"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"
          android:background="@drawable/navigation_shape"
          android:alpha="0"
          android:visibility="visible"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginBottom="8dp"
          android:onClick="requestNavigation"
          tools:layout_constraintRight_creator="1"
          tools:layout_constraintLeft_creator="1"/>

  <RadioGroup
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          app:layout_constraintTop_toBottomOf="@+id/Destination"
          android:layout_marginRight="20dp"
          app:layout_constraintRight_toRightOf="parent"
          android:layout_marginLeft="20dp"
          app:layout_constraintLeft_toLeftOf="parent"
          android:id="@+id/navigationRadioGroup"
          android:checkedButton="@+id/DrivingRadio"
          android:orientation="horizontal"
          android:background="@color/cast_intro_overlay_button_background_color"
          android:layout_marginStart="20dp"
          android:layout_marginEnd="20dp"
          android:isScrollContainer="true">

    <RadioButton
            android:text="Driving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/DrivingRadio"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:background="@drawable/custom_radio_button"
            android:textAlignment="center"/>

    <RadioButton
            android:text="Walking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/WalkingRadio"
            android:layout_weight="1"
            android:button="@android:color/transparent"
            android:background="@drawable/custom_radio_button"
            android:textAlignment="center"/>

    <RadioButton
            android:text="Transit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TransitRadio"
            android:layout_weight="1"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:textAlignment="center"/>

    <RadioButton
            android:text="Cycling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/CyclingRadio"
            android:layout_weight="1"
            android:background="@drawable/custom_radio_button"
            android:button="@android:color/transparent"
            android:textAlignment="center"/>

  </RadioGroup>

  <LinearLayout
          android:orientation="vertical"
          android:layout_width="0dp"
          android:layout_height="0dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintBottom_toBottomOf="@+id/mapView"
          app:layout_constraintTop_toBottomOf="@+id/navigationRadioGroup"
          android:id="@+id/ListViewParent"
          android:elevation="10dp"
          android:visibility="invisible"
          >

    <Button
            android:text="^"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:id="@+id/ListViewBtn"
            android:onClick="listViewBtn"
            android:textSize="5sp"
            android:textAlignment="center"
            android:background="@drawable/full_button"
            android:textColor="@color/cast_intro_overlay_button_background_color"/>

    <ListView
            android:layout_width="match_parent"
            android:id="@+id/ListView"
            android:background="@color/cast_expanded_controller_progress_text_color"
            android:layout_height="match_parent"
            />

  </LinearLayout>

</android.support.constraint.ConstraintLayout>
