...
          android:background="@color/colorPrimaryDark">

    <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tab_Map"
            android:text="Map"
            android:icon="@drawable/routes"/>

    <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Tab_Setting"
            android:text="Setting"
            android:icon="@android:drawable/ic_menu_preferences"/>

  </android.support.design.widget.TabLayout>

</android.support.constraint.ConstraintLayout>

